# cpp-demo

./: .clang-format  CMakeLists.txt
cmake/: CommonConfig.cmake
include/: cpp-demo-export.hpp  cpp-demo.hpp  lib.hpp
src/: cpp-demo.cpp  lib.cpp
test/: CMakeLists.txt
test/src/: test.cpp
